# airmove-analyzer

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/: ass_format_spec.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: building.rs  coord.rs  db.rs  declination.rs  fac_building.rs  geo.rs  juso.rs  landuse.rs  lib.rs  main.rs  peak.rs  srtm.rs  vworld.rs  vworld_search.rs
src-tauri/src/analysis/: coverage.rs  heightmap.rs  los.rs  loss.rs  mod.rs  obstacle_monthly.rs  panorama.rs  pre_screening.rs
src-tauri/src/models/: mod.rs
src-tauri/src/parser/: ass.rs  mod.rs
src/apps/: DrawingApp.tsx  ReportApp.tsx  TrackMapApp.tsx
src/components/: BuildingGroupPanel.tsx  BuildingModal.tsx  DevOverlay.tsx
src/components/Layout/: Sidebar.tsx  Titlebar.tsx
src/components/Map/: AddressSearch.tsx  CoveragePanel.tsx  DeckGLOverlay.tsx  ImagePositioner.tsx  LOSProfilePanel.tsx  LoSProfilePanel.tsx  LossMarkers.tsx  MapStyleToggle.tsx  PlaybackControls.tsx  TrackLayer.tsx
src/components/Report/: AutoPaginate.tsx  EditableText.tsx  KatexMath.tsx  OMSectionImage.tsx  ObstacleMonthlyConfigModal.tsx  ObstaclePreScreeningModal.tsx  ReportAircraftSection.tsx  ReportCoverPage.tsx  ReportCoverageMapSection.tsx  ReportFlightComparisonSection.tsx  ReportFlightLossAnalysisSection.tsx  ReportFlightProfileSection.tsx  ReportLOSSection.tsx  ReportLoSSection.tsx  ReportLossSection.tsx  ReportMapSection.tsx  ReportOMAltitudeDistribution.tsx  ReportOMAzDistScatter.tsx  ReportOMBuildingLOS.tsx  ReportOMBuildingLoS.tsx  ReportOMCoverageDiff.tsx  ReportOMDailyChart.tsx  ReportOMFindings.tsx  ReportOMLosCrossSection.tsx  ReportOMLossEvents.tsx  ReportOMSectionHeader.tsx  ReportOMSummarySection.tsx  ReportPage.tsx  (+14 more)
src/dev/: SourceOverlay.tsx  babelPluginSourceAttrs.ts
src/pages/: AircraftManagement.tsx  Dashboard.tsx  Drawing.tsx  FileUpload.tsx  LoSObstacle.tsx  LossAnalysis.tsx  RadarManagement.tsx  ReportGeneration.tsx  Settings.tsx  TrackMap.tsx
src/store/: index.ts
src/types/: adsb.ts  aircraft.ts  building.ts  flight.ts  index.ts  landuse.ts  los.ts  loss.ts  obstacle.ts  panorama.ts  parse.ts  prescreening.ts  radar.ts  report.ts  track.ts  ui.ts  weather.ts
src/utils/: altitudeCorrection.ts  buildingTileCache.ts  flightConsolidation.ts  flightConsolidationWorker.ts  geo.ts  gpu2d.ts  gpuCompute.ts  gpuCoverage.ts  gpuDrawingCompute.ts  gpuPanorama.ts  lossDetection.ts  obstacleAnalysisHelpers.ts  olsSurfaces.ts  omFindingsGenerator.ts  omStats.ts  planOverlay.ts  radarConstants.ts  radarCoverage.ts  reflectorAnalysis.ts  reportTransfer.ts  sectionCapture.ts  weatherFetch.ts
src/workers/: coverageBuilder.worker.ts  flightConsolidation.worker.ts  gpuCoverage.worker.ts
(+8 files in other folders)
