[package]
name = "airmove-analyzer"
version = "0.1.0"
description = "NEC Radar Flight Inspector Analysis System"
authors = ["NEC Radar Team"]
edition = "2021"

[lib]
name = "airmove_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
base64 = "0.22"
