[package]
name = "airmove-analyzer"
version = "0.1.0"
description = "Desktop analysis tool for ASTERIX CAT048 radar recordings — parses NEC ASS files, visualizes flight inspection tracks on GPU-accelerated maps, and detects signal loss segments with automated classification"
authors = ["Gimpo Radar Site Flight Inspection Team"]
edition = "2021"

[lib]
name = "airmove_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
