[package]
name = "airmove-analyzer"
version = "0.1.0"
description = "Desktop analysis tool for ASTERIX CAT048 radar recordings — parses NEC ASS files, visualizes flight inspection tracks on GPU-accelerated maps, and detects signal loss segments with automated classification"
authors = ["Gimpo Radar Site Flight Inspection Team"]
edition = "2021"

[lib]
name = "airmove_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
rayon = "1.10"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "cookies"] }
tokio = { version = "1", features = ["time", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
flate2 = "1"
shapefile = "0.6"
zip = "2"
encoding_rs = "0.8"
wmm = "0.2"
time = "0.3"
futures = "0.3"

[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }
